@@ -46,19 +46,27 @@
   <properties>
     <!--Project properties-->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <compiler.fork>false</compiler.fork>
-    <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
-    <maven.release.plugin.version>3.0.0-M1</maven.release.plugin.version>
+    <maven.bundle.plugin.version>5.1.4</maven.bundle.plugin.version>
+    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+    <maven.deploy.plugin.version>3.0.0-M1</maven.deploy.plugin.version>
+    <maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
+    <maven.release.plugin.version>3.5.0</maven.release.plugin.version>
+    <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
+    <maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
     <javalin.thirdparty.bundle.version>3.11.2_1</javalin.thirdparty.bundle.version>
     <kotlin-osgi.version>1.3.71</kotlin-osgi.version>
-    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-    <errorprone.version>2.2.0</errorprone.version>
+    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+    <errorprone.version>2.4.0</errorprone.version>
+    <jacoco.maven.plugin.version>0.8.12</jacoco.maven.plugin.version>
+    <fmt.maven.plugin.version>2.3.0</fmt.maven.plugin.version>
 
     <!--Backend properties-->
-    <ddf.version>2.26.47</ddf.version>
-    <ddf-jsonrpc.version>0.6</ddf-jsonrpc.version>
+    <!-- update DDF version; this build works after building the DDF PR (https://github.com/codice/ddf/pull/6805) with a cherry-pick for https://github.com/codice/ddf/pull/6794) -->
+    <ddf.version>2.29.2-SNAPSHOT</ddf.version>
+    <ddf-jsonrpc.version>0.7</ddf-jsonrpc.version>
     <ddf.support.version>2.3.16</ddf.support.version>
     <antlr.version>4.3</antlr.version>
     <c3p0.version>0.9.5.5</c3p0.version>
@@ -89,6 +97,7 @@
     <pac4j.version>4.0.1</pac4j.version>
     <pax.web.jsp.version>7.2.18</pax.web.jsp.version>
     <quartz.version>2.3.2</quartz.version>
+    <restassured.version>3.3.0</restassured.version>
     <spark.version>2.9.2</spark.version>
     <spatial4j.version>0.7</spatial4j.version>
     <tika.version>1.24.1</tika.version>
@@ -103,7 +112,7 @@
     <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
     <hamcrest-all.version>1.3</hamcrest-all.version>
     <junit.version>4.12</junit.version>
-    <mockito.version>2.8.47</mockito.version>
+    <mockito.version>3.6.28</mockito.version>
     <objenesis.version>2.6</objenesis.version>
     <xmlunit.version>1.4</xmlunit.version>
 
@@ -172,42 +181,37 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>${maven.resources.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>${maven.compiler.plugin.version}</version>
           <configuration>
-            <compilerId>javac-with-errorprone</compilerId>
-            <forceJavacCompilerUse>true</forceJavacCompilerUse>
-            <!-- maven-compiler-plugin defaults to targeting Java 5, but our javac
-                    only supports >=6 -->
-            <source>8</source>
-            <target>8</target>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
             <maxmem>512M</maxmem>
             <fork>${compiler.fork}</fork>
             <encoding>${project.build.sourceEncoding}</encoding>
+            <compilerArgs>
+              <arg>-XDcompilePolicy=simple</arg>
+              <!--                            <arg>-Xplugin:ErrorProne</arg>-->
+              <arg>--add-exports</arg>
+              <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+            </compilerArgs>
+            <!--                        <annotationProcessorPaths>-->
+            <!--                            <path>-->
+            <!--                                <groupId>com.google.errorprone</groupId>-->
+            <!--                                <artifactId>error_prone_core</artifactId>-->
+            <!--                                <version>2.4.0</version>-->
+            <!--                            </path>-->
+            <!--                        </annotationProcessorPaths>-->
           </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.codehaus.plexus</groupId>
-              <artifactId>plexus-compiler-javac-errorprone</artifactId>
-              <version>2.8.2</version>
-            </dependency>
-            <!-- override plexus-compiler-javac-errorprone's dependency on
-                 Error Prone with the latest version -->
-            <dependency>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_core</artifactId>
-              <version>2.1.2</version>
-            </dependency>
-          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>4.2.1</version>
+          <version>${maven.bundle.plugin.version}</version>
           <extensions>true</extensions>
           <configuration>
             <!-- Disabled OBR to increase build speed -->
@@ -220,7 +224,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>${maven.surefire.plugin.version}</version>
           <configuration>
             <argLine>@{argLine} -Djava.awt.headless=true -noverify</argLine>
             <includes>
@@ -233,7 +237,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.4.1</version>
+          <version>${maven.enforcer.plugin.version}</version>
           <dependencies>
             <dependency>
               <groupId>ddf.support</groupId>
@@ -259,7 +263,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.10</version>
+          <version>${jacoco.maven.plugin.version}</version>
           <dependencies>
             <dependency>
               <groupId>org.codice.maven</groupId>
@@ -326,7 +330,7 @@
       <plugin>
         <groupId>com.coveo</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
-        <version>2.3.0</version>
+        <version>${fmt.maven.plugin.version}</version>
         <!--        <version>2.9</version>-->
         <executions>
           <execution>
@@ -340,12 +344,12 @@
       <plugin>
         <groupId>org.codehaus.gmavenplus</groupId>
         <artifactId>gmavenplus-plugin</artifactId>
-        <version>1.5</version>
+        <version>1.13.1</version>
         <executions>
           <execution>
             <goals>
               <goal>compile</goal>
-              <goal>testCompile</goal>
+              <goal>compileTests</goal>
             </goals>
           </execution>
         </executions>
